--- a/frontend/index-d.html
+++ b/frontend/index-d.html
@@ -1,3 +1,5 @@
+<!--  это пример начального дизайн файла на html как примерно будет выгдяеть наше приложение. ту тесть общий canvs - его мы перенесли на tldraw. из нужных фич - дизайн и организация модлаки для редактирования заметок.-->
+
 <!DOCTYPE html>
 <html lang="ru">
 
